Afffichage des chapitres avec images jvc ok

--- a/src/pages/read/read.scss
+++ b/src/pages/read/read.scss
@@ -1,3 +1,18 @@
 page-read {
 
+    .boutons{display:block}
+    .list{display:block}
+
+    ion-card{
+        img{
+          max-width: 68px;
+          max-height: 51px;
+        }
+    }
+
+    button {
+        display: block;
+        margin: 0 auto;
+    }
+
 }
