Modification nom de l'application + affichage boutons

--- a/src/pages/read/read.scss
+++ b/src/pages/read/read.scss
@@ -1,8 +1,5 @@
 page-read {
-
-    .boutons{display:block}
-    .list{display:block}
-
+    
     ion-card{
         img{
           max-width: 68px;
@@ -12,7 +9,7 @@ page-read {
 
     button {
         display: block;
-        margin: 0 auto;
+        margin: auto;
     }
 
 }
