Mise en page de la liste des histoires

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,14 @@
 page-home {
 
+.button{
+    display: block;
+    margin:auto;
+    width:100px;
+    text-align:center;
+}
+
+.title{
+    text-align: center;
+}
+
 }
