Enregistrement du marque page

--- a/src/pages/read/read.scss
+++ b/src/pages/read/read.scss
@@ -12,4 +12,12 @@ page-read {
         margin: auto;
     }
 
+    .story{
+        position:relative;
+        margin-top:0px;
+        
+    }
+
+    height: 100%;
+    padding:1px;
 }
