--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,6 +7,13 @@ page-home {
     text-align:center;
 }
 
+.button-inline{
+    display: inline-block;
+    margin:auto;
+    width:100px;
+    text-align:center;
+}
+
 .title{
     text-align: center;
 }
